--- a/libbase/build.gradle
+++ b/libbase/build.gradle
@@ -24,16 +24,17 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     api 'com.github.BakerJQ:RxRetroHttp:1.0.6'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha06'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     api 'com.blankj:utilcode:1.23.7'
     api 'com.alibaba:arouter-api:1.4.1'
     api 'com.alibaba:arouter-annotation:1.0.6'
     api 'com.r0adkll:slidableactivity:2.0.6'
-    api 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
-    api 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.5.1'
+    api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-andx-11'
+    api 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-andx-11'
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.38'
     api 'frankiesardo:icepick:3.2.0'
     api 'com.readystatesoftware.systembartint:systembartint:1.0.3'
