--- a/libbase/build.gradle
+++ b/libbase/build.gradle
@@ -23,8 +23,8 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    api 'com.github.BakerJQ:RxRetroHttp:1.0.9'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha06'
+    api 'com.github.BakerJQ:RxRetroHttp:1.0.10'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta05'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
